@@ -9,6 +9,12 @@ What's New in Python 2.6 alpha 2?
 
 *Release date: XX-XXX-2008*
 
+Core and builtins
+-----------------
+
+- Issue #2238: Some syntax errors in *args and **kwargs expressions could give
+  bogus error messages.
+
 
 What's New in Python 2.6 alpha 1?
 =================================
